# AdvancedPracticalCourse_Ass1

./: 1. Simple Event Log Analysis copy.ipynb  3. Iterative Model Refinement.ipynb  4. Decision Mining.ipynb  5. Advanced Analysis.ipynb  pyproject.toml
cache/: alignments_dep05.pkl  alignments_dep099.pkl  alignments_heuristic_dep099.pkl
output/: decision_guards.md  dep_threshold_sweep.csv  miner_comparison_final.csv  threshold_comparison.csv
output/decision_trees/: model_comparison.csv
output/decision_trees/dep05/: summary.csv
